Update the md files